--- a/src/pages/Sudoku.css
+++ b/src/pages/Sudoku.css
@@ -8,4 +8,13 @@
 .sudoku-cell {
     height: 3rem;
     width: 3rem;
+    text-align: center;
+}
+
+.solution-button {
+    width: 10rem;
+}
+
+.backButton {
+    width: 12rem;
 }
