--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,13 @@ button:hover {
     background-color: #f9f9f9;
   }
 }
+
+@media screen and (max-width: 800px) {
+  :root{
+    width: fit-content;
+  }
+
+  body {
+    width: 20rem;
+  }
+}
