--- a/src/pages/Hangman.css
+++ b/src/pages/Hangman.css
@@ -1,6 +1,4 @@
-.game{
-    width: 60rem;
-}
+
 
 .incorrect {
  background-color: red;
@@ -8,17 +6,10 @@
 
 .correct {
     background-color: green;
-}
-
-.letter {
     height: 4rem;
     width: 4rem;
 }
 
-.correct {
-    height: 4rem;
-    width: 4rem;
-}
 
 .letterToGuess {
     width: 4rem;
@@ -34,3 +25,63 @@ button {
 .boton-reiniciar {
     width: 10rem;
 }
+
+/* Hangman.css */
+
+.game {
+    width: 50rem; /* Ajusta el ancho máximo según tus preferencias */
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .boton-iniciar,
+  .boton-reiniciar,
+  .letter-button {
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  .word-container {
+    margin: 20px 0;
+    font-size: 24px;
+  }
+  
+  .alphabet-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .letter {
+    margin: 5px;
+    padding: 5px;
+    font-size: 20px;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .game{
+        width: 16rem;
+    }
+
+    .palabra{
+        width: 25rem;
+        position: relative;
+        left: -5rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .letterToGuess{
+        height: 2rem;
+        width: 2rem;
+    }
+
+    .correct{
+        width: 3rem;
+        height: 3rem;
+    }
+  }
+
+  
