--- a/src/pages/Tic_Tac_Toe.css
+++ b/src/pages/Tic_Tac_Toe.css
@@ -24,3 +24,38 @@
 .boton-iniciar {
     width: 9rem;
 }
+
+@media only screen and (max-width: 600px) {
+    /* Estilos específicos para pantallas más pequeñas */
+    .container {
+      width: 100%;
+      height: 75vh;
+    }
+  
+    .board {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .board-row {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      height: 6rem;
+    }
+  
+    .square {
+      width: 30%;
+      padding: 10px;
+      font-size: 16px;
+      height: 4rem;
+    }
+  
+    .boton-iniciar,
+    .boton-reiniciar {
+      width: 100%;
+    }
+  }
+  
