--- a/src/pages/Hangman.css
+++ b/src/pages/Hangman.css
@@ -73,14 +73,35 @@ button {
         flex-direction: column;
     }
 
-    .letterToGuess{
+    .huecos{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+    .letter{
         height: 2rem;
         width: 2rem;
     }
 
+    .lettersGroup{
+        gap: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .letterToGuess{
+        height: 2rem;
+        width: 2rem;
+        text-align:end;
+        
+    }
+
     .correct{
-        width: 3rem;
-        height: 3rem;
+        width: 2rem;
+        height: 2rem;
     }
   }
 
