--- a/src/pages/Sudoku.css
+++ b/src/pages/Sudoku.css
@@ -18,3 +18,15 @@
 .backButton {
     width: 12rem;
 }
+
+@media (max-width: 600px) {
+  
+    .sudoku-cell {
+      width: 100%;
+      height: 30px;
+      font-size: 16px;
+    }
+  
+  }
+  
+  
