--- a/src/pages/Sudoku.css
+++ b/src/pages/Sudoku.css
@@ -1,4 +1,14 @@
+.intro2 {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+}
 
+.intro2 > img {
+    height: 20rem;
+    width: 20rem;
+}
 .sudoku-row {
     display: flex;
     align-items: center;
@@ -20,7 +30,11 @@
 }
 
 @media (max-width: 600px) {
-  
+    .intro2 > img {
+        height: 20rem;
+        width: 80%;
+      }
+
     .sudoku-cell {
       width: 100%;
       height: 30px;
