--- a/src/pages/Tic_Tac_Toe.css
+++ b/src/pages/Tic_Tac_Toe.css
@@ -1,24 +1,39 @@
+.intro {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+}
+
+.intro > img {
+  height: 20rem;
+  width: 20rem;
+}
+
 .status {
     font-size: 24px;
     margin-top: 3rem;
 }
 
 .board {
+  display: flex;
+  flex-direction: column;
     height: 30rem;
     margin-top: 4rem;
+    gap: 2rem;
 }
 
 .board-row {
-    height: 10rem;
-    width: 30rem;
+    height: 5rem;
+    width: 17rem;
     display: flex;
     gap: 2rem;
 }
 
 .square {
-    height: 8rem;
-    width: 10rem;
-    font-size: 40px;
+    height: 5rem;
+    width: 5rem;
+    font-size: 20px;
 }
 
 .boton-iniciar {
@@ -26,6 +41,11 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .intro > img {
+    height: 20rem;
+    width: 80%;
+  }
+
     .container {
       width: 18rem;
       height: 75vh;
